--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,30 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank(pwiron)
+      Ionic Blank
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <h1>환영합니다. IONIC !!</h1>
+  <ion-list>
+    <ion-item *ngFor="let item of items" (click)="itemSelected(item)">
+        {{item.name}}
+    </ion-item>
+  </ion-list>
+
+  <ion-list>
+    <ion-item>
+      <ion-label>사용자이름:</ion-label>
+      <ion-input type="text" [(ngModel)]="userName"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>입력한 값 출력</ion-label>
+      <ion-label>{{userName}}</ion-label>
+    </ion-item>
+  </ion-list>
+
+  <button ion-button full [disabled]="disabledSwitch"
+          (click)="myButton($event)">MyButton</button>
 </ion-content>
